--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"eslint-config-next": "14.2.1",
 		"framer-motion": "^11.1.1",
 		"intl-messageformat": "^10.5.0",
-		"next": "14.2.1",
+		"next": "^14.2.3",
 		"next-themes": "^0.2.1",
 		"postcss": "8.4.38",
 		"react": "18.2.0",
