--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"postcss": "8.4.38",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"sharp": "^0.33.3",
 		"tailwind-variants": "^0.1.20",
 		"tailwindcss": "3.4.3",
 		"typescript": "5.0.4"
