--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"clsx": "^2.0.0",
 		"eslint": "8.48.0",
 		"eslint-config-next": "14.2.1",
+		"file-loader": "^6.2.0",
 		"framer-motion": "^11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"next": "^14.2.3",
@@ -38,6 +39,7 @@
 		"sharp": "^0.33.3",
 		"tailwind-variants": "^0.1.20",
 		"tailwindcss": "3.4.3",
-		"typescript": "5.0.4"
+		"typescript": "5.0.4",
+		"url-loader": "^4.1.1"
 	}
 }
