--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
 		"@nextui-org/switch": "^2.0.28",
 		"@nextui-org/system": "2.1.0",
 		"@nextui-org/theme": "2.2.0",
+		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-slot": "^1.0.2",
 		"@react-aria/ssr": "^3.9.2",
 		"@react-aria/visually-hidden": "^3.8.10",
 		"@types/node": "20.5.7",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
 		"autoprefixer": "10.4.19",
-		"clsx": "^2.0.0",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
 		"eslint": "8.48.0",
 		"eslint-config-next": "14.2.1",
 		"file-loader": "^6.2.0",
@@ -37,8 +41,10 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"sharp": "^0.33.3",
+		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.1.20",
 		"tailwindcss": "3.4.3",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "5.0.4",
 		"url-loader": "^4.1.1"
 	}
